# OpenMac

./: .gitignore  Cargo.toml  README.md  build.bat  build.zig  build.zig.zon  linker.ld  x86_64-unknown-none.json
src/: bstack.s  fsdisk.c  gdt.c  gdt_flush.s  idt.c  interrupt.s  isr.c  kernel.c  kernel.h  kernel.rs  linker.ld  main.zig  memory.c  pic.c
