[package]
name = "OpenMac"
version = "0.0.1"
edition = "2024"
authors = ["Georgecane"]
description = "OpenMac Operating System written in Rust"
license = "Apache-2.0"
repository = "https://github.com/Georgecane/OpenMac"

[dependencies]
# Bootloader for x86_64 OS
bootloader = { version = "0.11", default-features = false }
bootloader_api = { version = "0.11", default-features = false }

# x86_64 crate with no_std features
x86_64 = { version = "0.15", default-features = false, features = ["instructions"] }

# Utilities
spin = { version = "0.9", default-features = false }
linked_list_allocator = { version = "0.10", default-features = false }
volatile = { version = "0.4", default-features = false }
lazy_static = { version = "1.5", default-features = false, features = ["spin_no_std"] }

bitflags = { version = "2.10", default-features = false }

# Logging (optional, no_std compatible)

[[bin]]
name = "OpenMac"
path = "src/kernel.rs"
test = false
bench = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "z"
lto = true
codegen-units = 1
strip = true
